[workspace]
members = ["packages/*", "contracts/*"]

[profile.release.package.Wefund]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false

[profile.release.package.Vesting]
codegen-units = 1
incremental = false

[profile.release.package.Staking]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
